# RecSys_and_LLM

./: .env_sample  .gitignore  .pre-commit-config.yaml  README.md  db.py  pyproject.toml
.github/ISSUE_TEMPLATE/: BUG.md  CHORE.md  DOCS.md  FEAT.md
ML/: __init__.py  data_check.py  utils.py
ML/models/: a_llmrec_model.py  llm4rec.py
ML/models/ALLMRec/: a_llmrec_model.py  recsys_model.py  train_model.py
ML/models/LGCN/: __init__.py  model.py
ML/models/TiSASRec/: TiSASRec_inference.py  model.py
ML/models/gSASRec/: gsasrec.py  gsasrec_inference.py
ML/pre_train/sasrec/: utils.py
backend/: api.py  inference.py  model.py  requirements.txt  run_inference.py  utils.py
backend/app/: config.py  dependecies.py  dependencies.py  inference.py  inference_legacy.py  main.py  routers.py  schemas.py  services.py
backend/models/: a_llmrec_model.py  llm4rec.py  recsys_model.py
backend/pre_train/sasrec/: model.py  utils.py
backend/pretrain/sasrec/: data_preprocess.py  model.py  utils.py
crawling/: align.ipynb  clean.py  cleaned_title.txt  crawl.py  data_check.ipynb  extract_title.py  find_special_entities.py  genre_data_check.ipynb  imdb_crawler.py  model.ipynb  replace_special_entities.py  test.ipynb  test_crawling.py  test_crawling_imdb.py  test_imdb_data.json  titles_only.txt  titles_without_vhs.txt
crawling/wandb/: latest-run
crawling/wandb/run-20250220_114527-de108gc6/: run-de108gc6.wandb
crawling/wandb/run-20250220_130229-cv51cowq/: run-cv51cowq.wandb
crawling/wandb/run-20250220_130338-rudbqys0/: run-rudbqys0.wandb
front/: README.md  app.py  utils.py
front/pages/: components.py  main_page.py
ml/: data_check.py  utils.py
ml/models/: model_loader.py
ml/models/ALLMRec/: a_llmrec_model.py  recsys_model.py
ml/models/TiSASRec/: TiSASRec_inference.py  main.py  utils.py
ml/models/gSASRec/: config.py  gsasrec.py  transformer_decoder.py
movie_rec_finetuning/: train_movie_rec.yaml
recsys_and_llm/DB/: README.md  main.py  requirements.txt
recsys_and_llm/backend/: api.py  inference.py  requirements.txt
recsys_and_llm/backend/app/: config.py  dependencies.py  inference.py  inference_legacy.py  main.py  routers.py  schemas.py  services.py
recsys_and_llm/data/DB/: data_preprocess.py  db.py  main.py
recsys_and_llm/data/crawling/: genre_crawl.py
recsys_and_llm/front/: README.md  __init__.py  app.py
recsys_and_llm/front/assets/: styles.css
recsys_and_llm/front/components/: __init__.py  conversation_manager.py  pipeline_manager.py  recommend_main.py  recommender.py  response_generator.py
recsys_and_llm/front/pages/: __init__.py  chat_page.py  item_page.py  main_page.py
recsys_and_llm/front/utils/: __init__.py  image_utils.py  item_utils.py  session_utils.py  style_utils.py  (+1 more)
recsys_and_llm/ml/: README.md  quick_start_crs_toolkit.ipynb  utils.py
tests/: test_db_connection.py  test_unicrs.py
tests/ml/: test_crs_toolkit.py
(+181 files in other folders)
