[project]
name = "recsys-and-llm"
version = "0.1.0"
description = "movie recommendation web page"
authors = [
    {name = "Jun Seo",email = "sjin4861@pusan.ac.kr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "pyparsing (>=3.2.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.1.0"
pytest = "^8.3.4"

